--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
+    <title>Registration page</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -153,37 +153,40 @@
 
         </div>
     </section>
-    <section class="reviews">
-        <div class="container reviews-container">
-            <div class="review-left">
-                <img src="img/bgcreview.png" alt="img">
-                <p class="review-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
-                    condimentum“</p>
-            </div>
-            <div class="review-right">
-                <p class="sub-text">SUBSCRIBE <br>
-                    <span class="sub-text--small">FOR OUR NEWLETTER AND PROMOTION</span>
-                </p>
-                <div class="review-sub">
-                    <input class="review-email" type="text" value="Enter Your Email">
-                    <input class="review-button" type="button" value="Subscribe">
+    <footer class="footer">
+        <div class="footer-up">
+            <div class="reviews">
+                <div class="container reviews-container">
+                    <div class="review-left">
+                        <img src="img/bgcreview.png" alt="img">
+                        <p class="review-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                            condimentum“
+                        </p>
+                    </div>
+                    <div class="review-right">
+                        <p class="sub-text">SUBSCRIBE <br>
+                            <span class="sub-text--small">FOR OUR NEWLETTER AND PROMOTION</span>
+                        </p>
+                        <div class="review-sub">
+                            <input class="review-email" type="text" value="Enter Your Email">
+                            <input class="review-button" type="button" value="Subscribe">
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
-    </section>
-    <footer class="footer">
-        <div class="container footer-container">
-            <div class="footer-text">
-                <p>© 2021 Brand All Rights Reserved.</p>
+        <div class="footer-down">
+            <div class="container footer-container">
+                <div class="footer-text">
+                    <p>© 2021 Brand All Rights Reserved.</p>
+                </div>
+                <div class="footer-icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest-p"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
             </div>
-            <div class="footer-icons">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-pinterest-p"></i>
-                <i class="fa-brands fa-twitter"></i>
-            </div>
-
         </div>
 
     </footer>
